[B]Version 0.0.15[/B]
- Show links for  Kanal2, Kanal11, Kanal12 live tv if current show is viewable online / Kanal2, Kanal11 Kanal12 TV lingid kui käimasoleval saatel on veebis näitamise õigused
[B]Version 0.0.14[/B]
- Url fix / Aadressi parandus
[B]Version 0.0.13[/B]
- Minor fix / Väike parandus
[B]Version 0.0.12[/B]
- Stream lookup fix / Ülekande leidmise parandus
[B]Version 0.0.11[/B]
- Bugfix / Vea parandus
[B]Version 0.0.10[/B]
- pleier.postimees.ee
[B]Version 0.0.9[/B]
- Stream lookup fix / Ülekande leidmise parandus
[B]Version 0.0.8[/B]
- Stream ID lookup fix / Ülekande id leidmise parandus
[B]Version 0.0.7[/B]
- Workaround for a datetime.strptime bug / datetime.strptime vea lahendus
- Code cleanup / koodi puhastus
[B]Version 0.0.6[/B]
- Fix stuff, return of the start time / Natuke parandusi
[B]Version 0.0.5[/B]
- Fix to actually show ongoing streams - Parandus otseülekannete leidmiseks
[B]Version 0.0.4[/B]
- Try more keywords to find live streams / Kasuta otseülekannete leidmiseks rohkem märksõnu 
[B]Version 0.0.3[/B]
- Show starting time if available / Näita ülekande algusaega
- Try more keywords to find live streams / Kasuta otseülekannete leidmiseks rohkem märksõnu
[B]Version 0.0.2[/B]
- Fix to actually show ongoing streams - Parandus otseülekannete leidmiseks
[B]Version 0.0.1[/B]
- Initial release / Esmane väljalase