@@ -1,9 +1,0 @@
-<?xml version="1.0" encoding="utf-8"?>
-<strings>
-    <string id="200">An error occurred while communication with postimees.ee</string>
-    <string id="201">The error message is:</string>
-    <string id="202">Unable to find the stream</string>
-    <string id="203">Schedule seems to be empty</string>
-    <string id="204">Older shows</string>
-    <string id="205">Live</string>
-</strings>
