@@ -1,9 +1,0 @@
-<?xml version="1.0" encoding="utf-8"?>
-<strings>
-    <string id="200">postimees.ee lehega suhtlemisel ilmnes tõrge.</string>
-    <string id="201">Veateade:</string>
-    <string id="202">Striimi aadressi leidmine nurjus</string>
-    <string id="203">Hetkel pole kavas ühtegi ülekannet</string>
-    <string id="204">Vanemad saated</string>
-    <string id="205">otse</string>
-</strings>
